noinst_LIBRARIES = libcrypto.a

libcrypto_a_SOURCES= algebra.cpp algparam.cpp asn.cpp basecode.cpp cbcmac.cpp channels.cpp cryptlib.cpp default.cpp des.cpp dessp.cpp dh.cpp dll.cpp dsa.cpp ec2n.cpp eccrypto.cpp ecp.cpp eprecomp.cpp files.cpp filters.cpp fips140.cpp fipstest.cpp gf2n.cpp gfpcrypt.cpp hex.cpp hmac.cpp integer.cpp iterhash.cpp md5.cpp misc.cpp modes.cpp modexppc.cpp mqueue.cpp nbtheory.cpp oaep.cpp osrng.cpp pch.cpp pkcspad.cpp pssr.cpp pubkey.cpp queue.cpp randpool.cpp rdtables.cpp rijndael.cpp rng.cpp rsa.cpp sha.cpp simple.cpp skipjack.cpp strciphr.cpp trdlocal.cpp

EXTRA_DIST = Readme.txt License.txt Doxyfile\
3way.h \
adler32.h \
aes.h \
algebra.h \
algparam.h \
arc4.h \
argnames.h \
asn.h \
base32.h \
base64.h \
basecode.h \
bench.h \
blowfish.h \
blumshub.h \
camellia.h \
cast.h \
cbcmac.h \
channels.h \
config.h \
crc.h \
cryptlib.h \
default.h \
des.h \
dh2.h \
dh.h \
dll.h \
dmac.h \
dsa.h \
ec2n.h \
eccrypto.h \
ecp.h \
elgamal.h \
eprecomp.h \
esign.h \
factory.h \
files.h \
filters.h \
fips140.h \
fltrimpl.h \
gf2_32.h \
gf256.h \
gf2n.h \
gfpcrypt.h \
gost.h \
gzip.h \
haval.h \
hex.h \
hmac.h \
hrtimer.h \
ida.h \
idea.h \
integer.h \
iterhash.h \
lubyrack.h \
luc.h \
mars.h \
md2.h \
md4.h \
md5.h \
md5mac.h \
mdc.h \
misc.h \
modarith.h \
modes.h \
modexppc.h \
mqueue.h \
mqv.h \
nbtheory.h \
network.h \
nr.h \
oaep.h \
oids.h \
osrng.h \
panama.h \
pch.h \
pkcspad.h \
polynomi.h \
pssr.h \
pubkey.h \
pwdbased.h \
queue.h \
rabin.h \
randpool.h \
rc2.h \
rc5.h \
rc6.h \
resource.h \
rijndael.h \
ripemd.h \
rng.h \
rsa.h \
rw.h \
safer.h \
seal.h \
secblock.h \
seckey.h \
serpent.h \
shacal2.h \
sha.h \
shark.h \
simple.h \
skipjack.h \
smartptr.h \
socketft.h \
square.h \
stdcpp.h \
strciphr.h \
tea.h \
tiger.h \
trdlocal.h \
trunhash.h \
ttmac.h \
twofish.h \
validate.h \
wait.h \
wake.h \
whrlpool.h \
winpipes.h \
words.h \
xormac.h \
xtrcrypt.h \
xtr.h \
zdeflate.h \
zinflate.h \
zlib.h
